# rust-cab

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: tests.yml
examples/: cabtool.rs  readcab.rs
src/: all_files.rs  builder.rs  cabinet.rs  checksum.rs  ctype.rs  datetime.rs  file.rs  folder.rs  lib.rs  macros.rs  mszip.rs  string.rs
src/internal/: builder.rs  cabinet.rs  checksum.rs  consts.rs  ctype.rs  datetime.rs  file.rs  folder.rs  macros.rs  mod.rs  mszip.rs  string.rs
tests/: roundtrip.rs  seek.rs
