[package]
name = "cab"
version = "0.5.0"
edition = '2021'
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Read/write Windows cabinet (CAB) files"
repository = "https://github.com/mdsteele/rust-cab"
keywords = ["archive", "cab", "cabinet", "windows"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
lzxd = "0.2"
time = "0.3"

[dev-dependencies]
anyhow = "1.0"
lipsum = "0.8"
clap = { version = "4.1", features = ["color", "suggestions", "derive", "wrap_help", "unicode"] }
rand = { version = "0.8", features = ["small_rng"] }
time = { version = "0.3", features = ["macros"] }
winapi = { version = "0.3", features = ["basetsd", "minwindef", "winnt"] }
